Fixed title cutting off on smaller screen sizes

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -46,6 +46,10 @@ html a.login-text {
     background-position: center;
 }
 
+html a.title-bar {
+    width: 70%;
+}
+
 }
 
 .btn-float {
